Restore guest mode for unauthenticated read access; fix Java 8 compatibility (replace java.net.http.HttpClient with HttpURLConnection, Map.of with HashMap)